--- a/index.html
+++ b/index.html
@@ -35,26 +35,24 @@
             <a href="#faq">FAQ</a></li>
         </ul>
         <!--ハンバーガーメニューここから-->
-     <div class="hm-menu">
-      <!-- ハンバーガーメニュー表示・非表示の切替 -->
-      <input type="checkbox" id="hm-menu-switch" class="hm-menu-checkbox">
+        <div class="gMenu">
+          <input class="menu-btn" type="checkbox" id="menu-btn">
+          <label class="menu-icon" for="menu-btn">
+            <span class="navicon"></span>
+          </label>
+          <ul class="menu">
+            <li><a href="#particulars">こだわり</a></li>
+            <li><a href="#chef">パテシエの紹介</a></li>
+            <li><a href="#charm">プチフールの魅力</a></li>
+            <li><a href="#comment">ご購入者様の声</a></li>
+            <li><a href="#product">商品紹介</a></li>
+            <li><a href="#faq">FAQ</a></li>
+            
+          </ul>
+        </div>
 
-    <!-- ハンバーガーアイコン -->
-      <label for="hm-menu-switch" class="hm-menu-label"><span></span></label>
-
-     <!-- メニュー -->
-     <div class="hm-menu-contents">
-       <ul class="hm-menu-list">
-         <li class="hm-menu-item"><a href="#particulars">こだわり</a></li>
-         <li class="hm-menu-item"><a href="#chef">パテシエの紹介</a></li>
-         <li class="hm-menu-item"><a href="#charm">プチフールの魅力</a></li>
-         <li class="hm-menu-item"><a href="#comment">ご購入者様の声</a></li>
-         <li class="hm-menu-item"><a href="#product">商品紹介</a></li>
-         <li class="hm-menu-item"><a href="#faq">FAQ</a></li>
-       </ul>
-     </div>
    <!--ハンバーガーメニューここまで-->
-    </nav>
+  </nav>
 
     </header>
 
@@ -69,10 +67,9 @@
           </div>
             <div class="intro-text">
               <p class="hhb">HappyHappyBirthdayが贈る</p>
-              <h2>オーダーケーキ専門店の<br>
+              <h2>オーダーケーキ専門店の
                   プチフールギフトが登場</h2>
-              <p>オーダーケーキ専門店「HappyHappyBirthDay」が渾身を込めて<br>
-                 プロデュースしたプチフールのギフトが登場！<br>
+              <p>オーダーケーキ専門店「HappyHappyBirthDay」が渾身を込めてプロデュースしたプチフールのギフトが登場！
                  小さくても「HappyHappyBirthDay」の魅力が詰まった魅惑のお菓子をご堪能ください。</p>
         </div>
       </section>
@@ -82,10 +79,10 @@
         <img src="img/food.jpg" class="pphoto"  alt="厳選素材">
         <div>
           <h4>厳選しこだわり抜いた素材</h4>
-          <p class="particulars_p">「HappyHappyBirthDay」では国産小麦、<br>
-              フランス直輸入のバターなどこだわりの　　<br>
-              素材で提供しております。プチフールに　　<br>
-              変わっても素材は同じものを使用し、　　　<br>
+          <p class="particulars_p">「HappyHappyBirthDay」では国産小麦<br>
+              フランス直輸入のバターなど<br>
+              こだわりの素材で提供しております。<br>
+              プチフールに変わっても素材は同じものを使用し,<br>
               こだわり抜いた当店の魅力はそのままです。</p>
         </div>
         <img src="img/chef.jpg" class="pphoto" alt="パテシエ">
@@ -98,19 +95,20 @@
         <img src="img/wrapping.jpg" class="pphoto" alt="ラッピング">
         <div>
           <h4>洗練され可愛いデザイン</h4>
-          <p class="particulars_p">素材を活かし、可愛いデザインのケーキはオー<br>
-             ダーケーキ専門店ならでは。パッケージや包装<br>
-             にもこだわり、見た目にも楽しい老若男女幅広<br>
-             く誰もが喜ばれるパッケージとなっております。</p>
+          <p class="particulars_p">素材を活かし、可愛いデザインの<br>
+            ケーキはオーダーケーキ専門店ならでは。<br>
+            パッケージや包装にもこだわり、<br>
+            見た目にも楽しい老若男女幅広く<br>
+            誰もが喜ばれるパッケージとなっております。</p>
         </div>
       </section>
 
       <section id="chef">
-        <h3>クープ・デュ・モンド金賞のパテシエが贈る<br>
-            小さくて可愛いお菓子たち</h3>
+        <h3>クープ・デュ・モンド金賞<br>
+            のパテシエが贈る小さくて可愛いお菓子たち</h3>
         <img src="img/yosinaka.jpg" class="chef-photo" alt="義仲慶一">
         <div class="portfolio">
-          <p class="hhb">フランス　クープ　デュ　モンド2003金賞受賞</p>
+          <p class="hhb">フランス クープ デュ モンド2003金賞受賞</p>
           <h5>義仲　慶一</h5>
           <p>フランスの栄誉ある賞、「クープ・デュ・モンド」金賞を受賞したパティシエの義仲慶一が総合プロデュースをしております。<br>
              素材の美味しさを引き出し、見るものを魅了するお菓子の数々をお楽しみください。                                <br>
@@ -162,8 +160,8 @@
           <img src="img/present.jpg" class="scene-photo" alt="プレゼントにも">
           <h6>ギフトやプレゼントに</h6>
           <p class="scene-word">
-            美しいパッケージはギフトにも喜ばれています<br>
-            冷凍で５日間の保存が可能ですのでプレせんとにも最適。<br>
+            美しいパッケージはギフトにも喜ばれています。
+            冷凍で５日間の保存が可能ですのでプレゼントにも最適。
             ご配送も承っております。
           </p>
         </div>
@@ -171,9 +169,8 @@
           <img src="img/mystyle.jpg" class="scene-photo" alt="自分へのご褒美">
           <h6>自分へのご褒美にも</h6>
           <p class="scene-word">
-            自分が頑張った時は何か自分にもプレゼントしたいもの。<br>
-            冷凍保存ができるので少しづつ毎日の楽しみとしても<br>
-            ご利用ください。
+            自分が頑張った時は何か自分にもプレゼントしたいもの。
+            冷凍保存ができるので少しづつ毎日の楽しみとしてもご利用ください。
           </p>
         </div>
       </section>
@@ -181,19 +178,18 @@
       <section id="comment">
         <h3>プチフール、親しまれています！</h3>
         <ul class="voice">
-          <li class="voice-co">お友達の集まりに持って行ったら可愛いと大人気！<br>
-              どこで買ったの？の声に内心教えたくない気持ちになりました。</li>
+          <li class="voice-co">お友達の集まりに持って行ったら可愛いと大人気！どこで買ったの？の声に内心教えたくない気持ちになりました。</li>
             <p class="personal">30代　女性　会社員</p>
-          <li class="voice-co">家族が集まる日は必ず買っておやつに食べてます。<br>
+          <li class="voice-co">家族が集まる日は必ず買っておやつに食べてます。
               取り合いになるけどみんな笑顔です！</li>
             <p class="personal">30代　女性　主婦</p>
-          <li class="voice-co">帰省の際にお土産に持って行ったら義母が笑顔になりました！<br>
-              嫁姑問題が解決するくらい和みます</li>
+          <li class="voice-co">帰省の際にお土産に持って行ったら義母が笑顔になりました！
+              嫁姑問題が解決するくらい和みます.</li>
             <p class="personal">20代　女性　主婦</p>
-          <li class="voice-co">大切な友達にプレゼントしたらとても喜んでくれました！<br>
+          <li class="voice-co">大切な友達にプレゼントしたらとても喜んでくれました！
                こっそり自慢のプレゼントです。</li>
             <p class="personal">20代　女性　大学生</p>
-          <li class="voice-co">がんばった時の自分へのご褒美に買っています。<br>
+          <li class="voice-co">がんばった時の自分へのご褒美に買っています。
                一つ一つを大切に食べるその時間が至福です。</li>
             <p class="personal">40代　女性　会社員</p>
         </ul>
